--- a/branches/MonoGame/Jypeli/Jypeli-VS2012.csproj
+++ b/branches/MonoGame/Jypeli/Jypeli-VS2012.csproj
@@ -125,6 +125,15 @@
     <Compile Include="Helpers\ReturnHelper.cs" />
     <Compile Include="Helpers\StreamHelpers.cs" />
     <Compile Include="Helpers\StringHelpers.cs" />
+    <Compile Include="Sound\MediaPlayer.cs" />
+    <Compile Include="Sound\Sound.cs" />
+    <Compile Include="Sound\SoundEffect.cs" />
+    <Compile Include="Events\Timer.cs" />
+    <Compile Include="DataTypes\Meter.cs" />
+    <Compile Include="DataTypes\IntMeter.cs" />
+    <Compile Include="DataTypes\DoubleMeter.cs" />
+    <Compile Include="Events\MeterAddOperation.cs" />
+    <Compile Include="Events\Operation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -158,30 +167,30 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Content\bin\AsRifle.xnb" />
-    <None Include="Content\bin\Auto.xnb" />
-    <None Include="Content\bin\Bullet.xnb" />
-    <None Include="Content\bin\Cannon.xnb" />
-    <None Include="Content\bin\CannonBall.xnb" />
-    <None Include="Content\bin\CannonFire.xnb" />
-    <None Include="Content\bin\DownArrow.xnb" />
-    <None Include="Content\bin\explosion.xnb" />
-    <None Include="Content\bin\explosion2.xnb" />
-    <None Include="Content\bin\explosionSound.xnb" />
-    <None Include="Content\bin\Grenade.xnb" />
-    <None Include="Content\bin\implosionSound.xnb" />
-    <None Include="Content\bin\laser.xnb" />
-    <None Include="Content\bin\MGAttack.xnb" />
-    <None Include="Content\bin\PlasmaAttack.xnb" />
-    <None Include="Content\bin\PlasmaCannon.xnb" />
-    <None Include="Content\bin\smoke.xnb" />
-    <None Include="Content\bin\Tank.xnb" />
-    <None Include="Content\bin\UpArrow.xnb" />
+    <None Include="Content\AsRifle.xnb" />
+    <None Include="Content\Auto.xnb" />
+    <None Include="Content\Bullet.xnb" />
+    <None Include="Content\Cannon.xnb" />
+    <None Include="Content\CannonBall.xnb" />
+    <None Include="Content\CannonFire.xnb" />
+    <None Include="Content\DownArrow.xnb" />
+    <None Include="Content\explosion.xnb" />
+    <None Include="Content\explosion2.xnb" />
+    <None Include="Content\explosionSound.xnb" />
+    <None Include="Content\Grenade.xnb" />
+    <None Include="Content\implosionSound.xnb" />
+    <None Include="Content\laser.xnb" />
+    <None Include="Content\MGAttack.xnb" />
+    <None Include="Content\PlasmaAttack.xnb" />
+    <None Include="Content\PlasmaCannon.xnb" />
+    <None Include="Content\smoke.xnb" />
+    <None Include="Content\Tank.xnb" />
+    <None Include="Content\UpArrow.xnb" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MonoGame\MonoGame.Framework\MonoGame.Framework.Windows.csproj">
-      <Project>{7de47032-a904-4c29-bd22-2d235e8d91ba}</Project>
-      <Name>MonoGame.Framework.Windows</Name>
+    <ProjectReference Include="..\MonoGame\MonoGame.Framework\MonoGame.Framework.WindowsGL.csproj">
+      <Project>{da65b249-9290-4a09-a48c-443a65845583}</Project>
+      <Name>MonoGame.Framework.WindowsGL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
