--- a/branches/MonoGame/esimerkit-Linux/Lumiukko/Lumiukko.csproj
+++ b/branches/MonoGame/esimerkit-Linux/Lumiukko/Lumiukko.csproj
@@ -65,4 +65,15 @@
       <Name>OpenTK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\CannonFire.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\norsu.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\AbracaZebra.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
